feat: implementado estilização formulário e inputs

--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -5,6 +5,7 @@
 
     padding: 0 1.5625rem;
     height: 3.75rem;
+    max-width: max-content;
 
     font-family: var(--font-secondary);
     font-size: 1.125rem;
